--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ div.quarto-about-marquee img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 1.5rem;
   border-radius: 50%;  /* make it round, like jolla */
 }
 
